tests-integration/fixtures/checking/1779903960_overlapping_instances_cross_module/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Y :: Y
value :: Int

Types
Y :: Type

Instances
instance C X Y

Roles
Y = []

Diagnostics
error[OverlappingInstances]: Overlapping type class instances found for: C X Y
  --> 7:1..7:22
  |
7 | instance cxy :: C X Y
  | ^~~~~~~~~~~~~~~~~~~~~
  trivia: forall (t :: Type). C X (t :: Type) is matching
  trivia: C X Y is matching
